<?xml version="1.0" encoding="UTF-8"?>
<project
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
    xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.faktorips</groupId>
        <artifactId>faktorips-devtools</artifactId>
        <version>22.12.0-SNAPSHOT</version>
    </parent>

    <artifactId>faktorips-devtools-eclipse</artifactId>
    <packaging>pom</packaging>

    <properties>
        <java.version>11</java.version>
        <target-platform>eclipse-2020-03</target-platform>
        <tycho.version>3.0.0-SNAPSHOT</tycho.version>
        <xtend-maven-plugin-version>2.27.0</xtend-maven-plugin-version>
        <maven-scm-plugin-version>1.12.2</maven-scm-plugin-version>
        <exec-maven-plugin.version>3.1.0</exec-maven-plugin.version>
    </properties>

    <modules>
        <module>targets</module>
        <module>plugins</module>
        <module>plugins/tests</module>
        <module>features</module>
        <module>sites</module>
    </modules>
    
    
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.faktorips</groupId>
                <artifactId>faktorips-devtools-bom</artifactId>
                <version>${faktorips.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
    <pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-maven-plugin</artifactId>
                <version>${tycho.version}</version>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-versions-plugin</artifactId>
                <version>${tycho.version}</version>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-source-plugin</artifactId>
                <version>${tycho.version}</version>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-surefire-plugin</artifactId>
                <version>${tycho.version}</version>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-p2-repository-plugin</artifactId>
                <version>${tycho.version}</version>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>target-platform-configuration</artifactId>
                <version>${tycho.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-scm-plugin</artifactId>
                <version>${maven-scm-plugin-version}</version>
            </plugin>
            <plugin>
                <groupId>org.eclipse.xtend</groupId>
                <artifactId>xtend-maven-plugin</artifactId>
                <version>${xtend-maven-plugin-version}</version>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>${exec-maven-plugin.version}</version>
            </plugin>
        </plugins>
    </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-maven-plugin</artifactId>
                <extensions>true</extensions>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-versions-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-surefire-plugin</artifactId>
                <configuration>
                    <useJDK>BREE</useJDK>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-source-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>target-platform-configuration</artifactId>
                <configuration>
                    <target>
                        <artifact>
                            <groupId>org.faktorips</groupId>
                            <artifactId>${target-platform}</artifactId>
                            <version>${project.version}</version>
                        </artifact>
                    </target>
                    <environments>
                        <environment>
                            <os>win32</os>
                            <ws>win32</ws>
                            <arch>x86_64</arch>
                        </environment>
                        <environment>
                            <os>linux</os>
                            <ws>gtk</ws>
                            <arch>x86_64</arch>
                        </environment>
                        <environment>
                            <os>macosx</os>
                            <ws>cocoa</ws>
                            <arch>x86_64</arch>
                        </environment>
                    </environments>
                    <pomDependencies>consider</pomDependencies>
                    <exclusions>
                        <exclusion>
                            <groupId>com.google.code.findbugs</groupId>
                            <artifactId>jsr305</artifactId>
                        </exclusion>
                    </exclusions>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>tagScm</id>
            <activation>
                <!-- This profile should be active by default, also if there 
                    is a next version set -->
                <activeByDefault>true</activeByDefault>
                <property>
                    <name>nextVersion</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-scm-plugin</artifactId>
                        <executions>
                            <execution>
                                <inherited>false</inherited>
                                <id>tag</id>
                                <phase>deploy</phase>
                                <goals>
                                    <goal>tag</goal>
                                </goals>
                                <configuration>
                                    <tag>v${unqualifiedVersion}_${version.kind}</tag>
                                    <message>Release Version
                                        ${unqualifiedVersion}.${buildQualifier}</message>
                                    <connectionType>connection</connectionType>
                                    <pushChanges>${scm.pushChanges}</pushChanges>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
